# tree-news

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: coverage.yml  docker-image.yml  pylint.yml  pytest.yml
tests/: test_embed_creator.py  test_error_handler.py  test_news_handler.py  test_news_parser.py  test_ping_updater.py  test_process_news.py  test_retry.py  test_webhook_sender.py  test_websocket_connector.py
tree_news/: __main__.py  embed_creator.py  error_handler.py  news_handler.py  news_parser.py  ping_updater.py  process_news.py  retry.py  webhook_sender.py  websocket_connector.py
